--- a/pvr.hdhomerundvr/changelog.txt
+++ b/pvr.hdhomerundvr/changelog.txt
@@ -1,4 +1,5 @@
-v1.2.9 (2018.01.xx)
+v1.2.9 (2018.07.xx)
+  - Update SQLite database engine to version 3.24.0
   - Correct format of SessionID passed to HDHomeRun RECORD engine for Live TV streams
   - (Windows) Build HTTP-only cURL from source instead of using prebuilt static library
   - (Linux/Android/OSX) Switch to HTTP-only prebuilt libcurl static library
